--- a/problem2/src/App.css
+++ b/problem2/src/App.css
@@ -1,6 +1,52 @@
 .full-width-space {
-	width: 100%;
 	display: flex;
 	background: linear-gradient(to right, #10146c, #08144c);
-	padding: 5%;
+	padding: 1%;
+	position: relative;
+}
+.curve-div {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	height: 110vh;
+	background-color: white;
+	border-top-left-radius: 70% 15%;
+	border-top-right-radius: 70% 15%;
+}
+.header-big {
+	font-size: 10vh;
+	font-family: Sans-serif;
+	color: white;
+	font-weight: bold;
+	margin: 2vw;
+}
+.card-trade-section {
+	width: 80vw;
+	max-width: 80vw;
+}
+.input-box {
+	width: 20vw;
+	padding: 1vw;
+	border-radius: 1vw;
+}
+.input-change {
+	width: 20vw;
+	height: 10vh;
+}
+.label-small {
+	font-size: 2vh;
+	font-family: Sans-serif;
+	color: rgb(131, 131, 131);
+	font-weight: bold;
+}
+.section-header {
+	font-size: 4vh;
+	font-family: Sans-serif;
+	color: rgb(51 51 51 / var(--tw-text-opacity));
+	font-weight: bold;
+}
+.ant-card.card-shadow {
+	box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2), 0 10px 30px rgba(0, 0, 0, 0.3);
+	border-radius: 10px;
 }
